--- a/startbootstrap-business-frontpage/css/business-frontpage.css
+++ b/startbootstrap-business-frontpage/css/business-frontpage.css
@@ -17,7 +17,7 @@ body {
 .business-header {
   height: 28vh;
   min-height: 300px;
-  background: url('../runway5.png') center center no-repeat scroll;
+  background: url('../images/runway5.png') center center no-repeat scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
